--- a/css/articles.css
+++ b/css/articles.css
@@ -4,3 +4,14 @@
 body {
   padding: 0 8vw;
 }
+h1 {
+  font-size: 50px;
+}
+h2, h3 {
+  font-weight: bold;
+}
+.squared {
+  border: 1px solid black;
+  padding: 30px;
+  margin: 0 0 25px 0;
+}
