--- a/css/articles.css
+++ b/css/articles.css
@@ -15,3 +15,10 @@ h2, h3 {
   padding: 30px;
   margin: 0 0 25px 0;
 }
+.yin-yang-esquema-div {
+  text-align: center;
+}
+.yin-yang-esquema {
+  margin: 40px 0;
+  width: 300px;
+}
