--- a/css/index.css
+++ b/css/index.css
@@ -45,6 +45,17 @@
   color: grey;
   border-radius: 5px;
 }
+.a-button--abstract {
+  padding: 10px 35px;
+  border: 1px solid white;
+  text-decoration: none;
+  color: white;
+  border-radius: 5px;
+}
+.a-button--abstract:hover {
+  color: grey;
+  border: 1px solid grey;
+}
 .a-button-div--call {
   display: none;
   padding: 0 0 30px 0;
@@ -104,7 +115,8 @@ b {
   font-size: 16px;
 }
 #abstract {
-  background-color: white;
+  background-color: #494949;
+  color: white;
   padding: 50px 20px;
 }
 .squares {
