--- a/css/articles.css
+++ b/css/articles.css
@@ -22,3 +22,13 @@ h2, h3 {
   margin: 40px 0;
   width: 300px;
 }
+.art-pic {
+  margin: 20px 0 30px 0;
+  width: 60%;
+}
+@media (max-width: 1000px) {
+  .art-pic {
+    margin: 20px 0 30px 0;
+    width: 100%;
+  }
+}
