--- a/css/articles.css
+++ b/css/articles.css
@@ -26,6 +26,23 @@ h2, h3 {
   margin: 20px 0 30px 0;
   width: 60%;
 }
+.a-button-div {
+  padding: 30px 0 8px 0;
+}
+.a-button-div--art {
+  padding: 0px 0 25px 0;
+}
+.a-button {
+  padding: 10px 35px;
+  border: 1px solid grey;
+  text-decoration: none;
+  color: grey;
+  border-radius: 5px;
+}
+.a-button:hover {
+  color: black;
+  border: 1px solid black;
+}
 @media (max-width: 1000px) {
   .art-pic {
     margin: 20px 0 30px 0;
